--- a/Hackathon IETF 99/ReadMe
+++ b/Hackathon IETF 99/ReadMe
@@ -1,3 +1,4 @@
 Folder for the information about the Hackathon event at IETF 99, 2017 July, in Prague
 
-[https://communities.cisco.com/community/developer/opensource/blog/2017/07/23/running-code-is-king-at-ietf-99-in-prague IETF Hackathon Summary]
+Link to IETF Hackathon Summary:
+https://communities.cisco.com/community/developer/opensource/blog/2017/07/23/running-code-is-king-at-ietf-99-in-prague
