--- a/YANG Data Model/October 2017 - draft-ietf-ccamp-mw-yang-02/ReadMe
+++ b/YANG Data Model/October 2017 - draft-ietf-ccamp-mw-yang-02/ReadMe
@@ -1,1 +1,1 @@
-Preliminary verions of the IETF CCAMP draft for microwave radio link v02
+IETF CCAMP draft submitted October 23 for microwave radio link
