--- a/Framework/Nov 2017 - draft-ietf-ccamp-microwave-framework-03/ReadMe
+++ b/Framework/Nov 2017 - draft-ietf-ccamp-microwave-framework-03/ReadMe
@@ -1,1 +1,2 @@
 IETF CCAMP draft submitted November 12, 2017
+The -03 revision of the framework draft for Management & Control of Microwave is updated with the chapter "Security Considerations" and some editorial changes to improve draft quality.
