--- a/YANG Topology Data Model/ReadMe
+++ b/YANG Topology Data Model/ReadMe
@@ -1,1 +1,2 @@
 Folder for the microwave specific topology model drafts
+Link to IETF CCAMP : https://datatracker.ietf.org/doc/draft-ye-ccamp-mw-topo-yang/ 
