--- a/YANG Data Model/2018-07 - draft-ietf-ccamp-mw-yang-07/ReadMe
+++ b/YANG Data Model/2018-07 - draft-ietf-ccamp-mw-yang-07/ReadMe
@@ -1,1 +1,1 @@
-fdasf
+The only minor change we've done is to update the range for some of the power related leafs in the microwave-radio-link module.
