--- a/YANG Data Model/2018-08 - draft-ietf-ccamp-mw-yang-09/ReadMe
+++ b/YANG Data Model/2018-08 - draft-ietf-ccamp-mw-yang-09/ReadMe
@@ -1,1 +1,2 @@
-fdasf
+The draft-ietf-ccamp-mw-yang is updated, because one of the referenced RFC 5246 is recently obsoleted by RFC 8446. 
+No technical change in this version.
